- some cleaning on warn messages for wrong scale, missing models
- boost in cutting drills
- added sketch button
- started experimental Sketch support
- improve help and add sketch functionality
- auto constraint coincident points and vertical/horizontal
- edge_width from kicad_pcb
- managed not supported geometry BSplines & Ellipses with optimized deviation   # loop in App.ActiveDocument.PCB_Sketch.Geometry searching for coincident vertex 
- aligned Sketch to center of A4 in pcbnew if first time 
- removing sketches from export 3d to step button
- removing sketches in FC0.16 and when exporting automatically
- added use grid_origin as reference point for placing the board and for sketch!!!
  this will allow to copy sketches between boards releases to keep constraints
- fixed Sketch position for default use BaseOrigin @ 0,0,0 
- fixed App::Part list inverted after FC 12090 https://github.com/FreeCAD/FreeCAD/pull/916
- fixed case of pcb with one drill only
- minor fix when exporting wrl from multi objects 
- fixed tabify
- added better support for Body (hidden Parts)
- fixed a regression in Sketch
- fixed Arc orientation when creating Sketch from dxf,svg
- improved FC0.16 compatibility
- aligned GridOrigin also in case of Sketch copy/paste from empty board
- aligned pushing pcb to GridOrigin from empty Sketch/Board (only GridOrigin set)
- removed draftify bugged function
- added support for arc of 360 deg
- added oval exception if only one value is done
- starting py3 compatibility
- added offset in mm after kicad_pcb version 20171114
- moved edgestofaces to internal function
- fixed ellipses
- added new materials
- improved bspline to arcs
- started footprint exporter (smd [rect, oval, circle])
- added Round Rectangles and Poly Lines (for RF design)
- simple copy button added
- improved TH, NPTH and SMD pads
- bspline allowed on footprint F_Silks
- solder Mask Zones for Polylines
- most clean code and comments done